<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgscreen2"
    android:layout_gravity="center"
    android:id="@+id/welcome2"
    android:gravity="center"
    android:orientation="vertical" >


    <TextView
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:gravity="center"
        android:id="@+id/welc2title"
        android:layout_gravity="top|center"
        android:text="@string/create_algo"
        android:textSize="30sp"
        android:textColor="@color/Grey"
        android:layout_marginTop="50sp"/>

    <ImageView
        android:layout_width="230sp"
        android:layout_height="230sp"
        android:id="@+id/welc2img"
        android:contentDescription="@string/create_algo"
        android:src="@drawable/makealgo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110sp"/>

    <TextView
        android:layout_width="300sp"
        android:layout_height="150sp"
        android:id="@+id/welc2txt"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="360sp"
        android:text="@string/welcome_screen_two_msg"
        android:textSize="25sp"
        android:gravity="center"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:id="@+id/welc2back"
        android:textSize="15sp"
        android:onClick="onClickBackWelcomeTwo"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="bottom|start"
        android:background="@color/colorAccent"
        android:layout_marginBottom="10sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:id="@+id/welc2next"
        android:textSize="15sp"
        android:onClick="onClickNextWelcomeTwo"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="bottom|end"
        android:background="@color/colorAccent"
        android:layout_marginBottom="10sp"/>

    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:src="@drawable/dots2"
        android:id="@+id/welc2dots"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="25sp"
        />

</FrameLayout>